src/objects/zqu__QuoteRatePlan__c.object
<CustomObject>
    <description>A QuoteRatePlan is part of a Quote.</description>
    <fields>
        <fullName>Is_Consulting_Final_Balance__c</fullName>
        <formula>zqu__QuoteProductName__c = &apos;Consulting - Market Study&apos; &amp;&amp; 
CONTAINS(LOWER(Name), &apos;balance due/final&apos;) &amp;&amp; (CONTAINS(LOWER(Name), &apos;| cons&apos;) || CONTAINS(LOWER(Name), &apos;|cons&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consulting Final Balance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reimbursable__c</fullName>
        <formula>LOWER(zqu__QuoteProductName__c) = &apos;consulting - market study&apos; &amp;&amp; 
CONTAINS(LOWER(Name), &apos;reimbursable expenses&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reimbursable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__AmendmentType__c</fullName>
        <description>The type of amendment being made.</description>
        <label>Amendment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NewProduct</fullName>
                </value>
                <value>
                    <fullName>RemoveProduct</fullName>
                </value>
                <value>
                    <fullName>TermsAndConditions</fullName>
                </value>
                <value>
                    <fullName>UpdateProduct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__Quote__r.zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <label>EntityID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalPrpoId__c</fullName>
        <label>Original Product Rate Plan Option ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote rate plan of the parent product.</description>
        <inlineHelpText>The quote rate plan of the parent product.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Child Quote Rate Plans</relationshipLabel>
        <relationshipName>ChildQuoteRatePlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanZuoraId__c</fullName>
        <description>corresponding Id with Product Catalog on remote zuora server</description>
        <label>Product Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan associated with a Product Rate Plan.</description>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteAmendment__c</fullName>
        <description>The identification of the amendment that this quote rate plan applies to.</description>
        <label>Quote Amendment</label>
        <referenceTo>zqu__QuoteAmendment__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteProductName__c</fullName>
        <label>Quote Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanFullName__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan associated with a Quote.</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanOverrideReferenceId__c</fullName>
        <description>The Id of another Quote Rate Plan in the order that this charge is acting on.</description>
        <label>Rate Plan Override Reference Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RootQrpId__c</fullName>
        <description>The unique ID corresponding to the root bundle that a Quote Rate Plan belongs to.</description>
        <inlineHelpText>The unique ID corresponding to the root bundle that a Quote Rate Plan belongs to.</inlineHelpText>
        <label>Root Quote Rate Plan ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificUpdateDate__c</fullName>
        <description>Specifies when to activate a future dated Update Order Action.</description>
        <inlineHelpText>Specifies when to activate a future dated Update Order Action.</inlineHelpText>
        <label>Specific Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionRatePlanZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan that the amendment is modifying. Required if AmendmentType is set to RemoveProduct or UpdateProduct.</description>
        <label>Subscription Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Time_Product_Added__c</fullName>
        <label>Time Product Added</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Quote Rate Plan</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zqu__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>